<resources>
    <string name="app_name">Heart Patrol</string>
    <string name="facebook_app_id" translatable="false">162037024142938</string>
    <string name="Login">LOGIN</string>
    <string name="Next">NEXT</string>
    <string name="Done">DONE</string>
    <string name="Pay">PAY</string>
    <string name="Setting">SETTING</string>
    <string name="Settings">SETTINGS</string>
    <string name="Transaction">TRANSACTION</string>
    <string name="Login_With">Login with</string>
    <string name="reg_email">Username or email</string>
    <string name="reg_email_sample">email@email.com</string>
    <string name="reg_password">Password</string>
    <string name="Register">REGISTER</string>
    <string name="Register_with">Register with</string>
    <string name="My_Password">My password</string>
    <string name="Password_confirmation">Password Confirmation</string>
    <string name="Minum_Characters">minimum 8 characters</string>
    <string name="Note_Register">By clicking next, you are agreeing to the   </string>
    <string name="Term_condition">terms and conditions </string>
    <string name="Enter_Name">Enter Name</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="ListUser">List User</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <!--PROFILE-->
    <string name="Profile">PROFILE</string>
    <string name="My_birthdate">My birth date is </string>
    <string name="ClickMe">Click Me</string>
    <string name="reg_male">Male</string>
    <string name="reg_female">Female</string>
    <string name="profile_change_to_ft"><u>CHANGE TO FT</u></string>
    <string name="profile_change_to_cm"><u>CHANGE TO CM</u></string>
    <string name="profile_change_to_lbs"><u>CHANGE TO LBS</u></string>
    <string name="profile_change_to_kg"><u>CHANGE TO KG</u></string>

    <!--ECG-->
    <string name="ecg_recording">ECG RECORDING</string>
    <string name="ecg_result">ECG RESULT</string>
    <string name="ecg_review">ECG REVIEW</string>
    <string name="ecg_saved_result">Saved ECG Result</string>
    <string name="ecg_review_reports">Reviewed ECG Reports</string>
    <string name="ecg_average_beat">Avarage Beat</string>
    <string name="ecg_over_read">ECG OVER READ</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Delete_ecg_report">Delete [2] ECG Reports?</string>
    <string name="Over_read_ecg_report">Over Read [2] ECG Reports?</string>

    <!--E-STORE-->
    <string name="estore">E-STORE</string>
    <string name="estore_package">Package</string>
    <string name="estore_review">Review</string>
    <string name="estore_review_btn">REVIEW</string>
    <string name="estore_payment">Payment</string>
    <string name="estore_confirm">Confirm</string>
    <string name="estore_sudah_bayar">SAYA SUDAH BAYAR</string>
</resources>
