<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_10">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/grey_m">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/space_40"
                android:paddingLeft="@dimen/space_40"
                android:layout_marginTop="@dimen/space_25"
                android:gravity="center"
                android:text="@string/Delete_ecg_report"
                android:textColor="#333333"
                android:textSize="@dimen/space_22" />
        </LinearLayout>


        <ui.CustomtextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_25"
            android:layout_marginRight="@dimen/space_25"
            android:layout_marginTop="@dimen/space_16"

            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/space_25"
            android:paddingRight="@dimen/space_25"
            android:paddingTop="@dimen/space_8"
            android:text="@string/Yes"
            android:textColor="@color/blu3"
            android:textSize="@dimen/space_22"
            font:name="Label" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark"
            android:layout_marginLeft="@dimen/space_25"
            android:layout_marginRight="@dimen/space_25" />

        <ui.CustomtextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_25"
            android:layout_marginRight="@dimen/space_25"
            android:layout_marginTop="@dimen/space_16"

            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/space_25"
            android:paddingRight="@dimen/space_25"
            android:paddingTop="@dimen/space_8"
            android:text="@string/No"
            android:textColor="@color/blu3"
            android:textSize="@dimen/space_22"
            font:name="Label" />


    </LinearLayout>
</RelativeLayout>