<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:font="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:paddingTop="@dimen/space_10"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/texline2"
        android:layout_toEndOf="@+id/texline2"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_16"
        android:id="@+id/linearLayout2">

        <ui.CustomtextView
            font:name = "Avenir_Light"
            android:textSize="22dp"
            android:text="@string/My_birthdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_22" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="@dimen/space_22"
                android:layout_height="@dimen/space_22"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginTop="@dimen/space_5"
                android:src="@drawable/ic_birthday_2" />

            <ui.CustomEditText
                android:id="@+id/edt_birthdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_40"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/space_40"
                android:background="@android:color/transparent"
                android:hint="@string/reg_email_sample"
                android:paddingBottom="@dimen/space_7"
                android:paddingTop="0dp"
                android:editable="false"
                android:textSize="@dimen/space_12"
                font:name="Avenir_Light"
                android:text="@string/ClickMe" />

            <ImageView
                android:id="@+id/right_icon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@color/transparant" />

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignEnd="@+id/right_icon5"
                android:layout_alignLeft="@+id/icon5"
                android:layout_alignRight="@+id/right_icon5"
                android:layout_alignStart="@+id/icon5"
                android:layout_below="@+id/icon5"
                android:background="#939597" />
        </RelativeLayout>

        <ui.CustomtextView
            font:name = "Avenir_Light"
            android:textSize="22dp"
            android:text="My gender is"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon6"
                android:layout_width="@dimen/space_22"
                android:layout_height="@dimen/space_22"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginTop="@dimen/space_5"
                android:src="@drawable/ic_gender_2" />

            <View
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignEnd="@+id/right_icon6"
                android:layout_alignLeft="@+id/icon6"
                android:layout_alignRight="@+id/right_icon6"
                android:layout_alignStart="@+id/icon6"
                android:layout_below="@+id/icon6"
                android:background="#939597" />
            <RadioGroup
                android:id="@+id/radioBtnReg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginTop="@dimen/space_2"
                android:layout_marginRight="@dimen/space_16"
                android:orientation="horizontal"
                android:paddingTop="0dp"
                android:layout_toRightOf="@+id/icon6"
                android:layout_toEndOf="@+id/icon6">

                <RadioButton
                    android:id="@+id/rboMale"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginBottom="@dimen/space_5"
                    android:background="@drawable/background_radiobutton_register"
                    android:buttonTint="@android:color/transparent"
                    android:theme="@style/radionbutton" />

                <ui.CustomtextView
                    android:id="@+id/tvMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginRight="@dimen/space_5"
                    android:foregroundGravity="center"
                    android:paddingTop="@dimen/space_5"
                    android:text="@string/reg_male" />

                <RadioButton
                    android:id="@+id/rboFemale"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginBottom="@dimen/space_5"
                    android:layout_marginLeft="@dimen/space_5"
                    android:background="@drawable/background_radiobutton_register"
                    android:buttonTint="@android:color/transparent"
                    android:checked="false"
                    android:paddingRight="@dimen/space_5"
                    android:theme="@style/radionbutton" />

                <ui.CustomtextView
                    android:id="@+id/tvFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_5"
                    android:paddingTop="@dimen/space_5"
                    android:text="@string/reg_female" />
            </RadioGroup>


        </RelativeLayout>

        <ui.CustomtextView
            android:id="@+id/btn_next"
            android:layout_width="@dimen/space_187"
            android:layout_height="@dimen/space_60"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/Next"
            android:textColor="#ffffff"
            android:textSize="@dimen/space_20"
            font:name="Avenir_Heavy"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_alignStart="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/space_20" />

    </LinearLayout>


</ScrollView>
